[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurostore"
version = "0.1.0"
description = "A package for storing and managing LLM queries."
requires-python = ">=3.11"
dependencies = ["pymilvus", "pymilvus[model]", "openai", "keybert"
]
maintainers = [
  {name = "Kunal Kapur", email = "kunalkapur888@gmail.com"}
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = ["black>24.1.0", "pytest>=8.0.0", "flake8", "numpy>=2.0.0"]



[tool.setuptools.packages.find]
where = ["src"]
