[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurostore"
version = "0.1.0"
description = "A package for storing and managing LLM queries."
requires-python = ">=3.11"
dependencies = [
  "pymilvus", 
  "pymilvus[model]", 
  "openai", 
  "keybert", 
  "numpy<2"
]
maintainers = [
  {name = "Kunal Kapur", email = "kunalkapur888@gmail.com"}
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = ["black>24.1.0", "pytest>=8.0.0", "flake8", "mypy>1.10.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
